--- a/Principia/Base.lproj/Main.storyboard
+++ b/Principia/Base.lproj/Main.storyboard
@@ -111,12 +111,43 @@
                                     <constraint firstItem="4Y1-gV-t0q" firstAttribute="leading" secondItem="V5X-Pj-3WK" secondAttribute="leading" constant="20" id="cSa-w4-Guy"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tbY-LX-K8w" userLabel="LevelComplete" colorLabel="IBBuiltInLabel-Green">
+                                <rect key="frame" x="184" y="312" width="400" height="400"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="✓" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfo-dU-DWe">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="179"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="150"/>
+                                        <color key="textColor" red="0.0" green="0.3033759124" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Solution found" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="132" translatesAutoresizingMaskIntoConstraints="NO" id="MPz-fj-ZH7">
+                                        <rect key="frame" x="158" y="49" width="132" height="82"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                        <color key="textColor" red="0.0" green="0.3033759124" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.80784320831298828" green="0.88235300779342651" blue="0.78039222955703735" alpha="0.95000000000000007" colorSpace="deviceRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="400" id="48J-kn-Iug"/>
+                                    <constraint firstItem="sfo-dU-DWe" firstAttribute="top" secondItem="tbY-LX-K8w" secondAttribute="top" id="6X6-f2-I1B"/>
+                                    <constraint firstItem="MPz-fj-ZH7" firstAttribute="leading" secondItem="sfo-dU-DWe" secondAttribute="trailing" constant="8" id="ZxP-63-Bbd"/>
+                                    <constraint firstItem="sfo-dU-DWe" firstAttribute="centerY" secondItem="MPz-fj-ZH7" secondAttribute="centerY" id="kHq-Qk-1fO"/>
+                                    <constraint firstAttribute="height" constant="400" id="oSy-MX-gdt"/>
+                                    <constraint firstItem="sfo-dU-DWe" firstAttribute="leading" secondItem="tbY-LX-K8w" secondAttribute="leading" id="vIg-WI-P5Z"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="2ux-1M-Bze" firstAttribute="top" secondItem="bks-Fo-Osy" secondAttribute="bottom" constant="20" id="1qE-IN-o3I"/>
                             <constraint firstItem="V5X-Pj-3WK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4Mk-oI-M5h"/>
+                            <constraint firstAttribute="centerX" secondItem="tbY-LX-K8w" secondAttribute="centerX" id="5AI-ej-B3b"/>
                             <constraint firstItem="bks-Fo-Osy" firstAttribute="top" secondItem="99O-ka-blD" secondAttribute="bottom" constant="10" id="69a-lQ-Tar"/>
+                            <constraint firstAttribute="centerY" secondItem="tbY-LX-K8w" secondAttribute="centerY" id="Byz-Oo-vvo"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2ux-1M-Bze" secondAttribute="bottom" id="GVp-ka-S0I"/>
                             <constraint firstAttribute="trailing" secondItem="2ux-1M-Bze" secondAttribute="trailing" id="JxT-oM-dFk"/>
                             <constraint firstAttribute="centerX" secondItem="99O-ka-blD" secondAttribute="centerX" id="ZUD-3a-qdd"/>
@@ -132,6 +163,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="geometryView" destination="2ux-1M-Bze" id="om1-wG-s4P"/>
+                        <outlet property="levelCompletionMessage" destination="tbY-LX-K8w" id="JTx-tJ-JQ1"/>
                         <outlet property="levelInstruction" destination="4Y1-gV-t0q" id="8Pd-2G-VSu"/>
                         <outlet property="toolControl" destination="99O-ka-blD" id="G98-fw-tO9"/>
                         <outlet property="toolInstruction" destination="bks-Fo-Osy" id="oEd-GC-qdW"/>
