--- a/Principia/Base.lproj/Main.storyboard
+++ b/Principia/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Level Selection View Controller - Select a challenge-->
+        <!--Level Selection View Controller - Select a level-->
         <scene sceneID="e3o-h2-tdb">
             <objects>
-                <tableViewController title="Select a challenge" id="taf-kY-eNe" customClass="DHLevelSelectionViewController" sceneMemberID="viewController">
+                <tableViewController title="Select a level" id="taf-kY-eNe" customClass="DHLevelSelectionViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="RMm-uZ-7Ge">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -44,7 +44,7 @@
                             <outlet property="delegate" destination="taf-kY-eNe" id="OfY-8n-rhq"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Select a Challenge" id="TQT-zl-U5w"/>
+                    <navigationItem key="navigationItem" title="Select a level" id="TQT-zl-U5w"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OG4-GY-CkO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
