--- a/Principia/Base.lproj/Main.storyboard
+++ b/Principia/Base.lproj/Main.storyboard
@@ -195,9 +195,18 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moves left: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kR3-Ig-OhP">
+                                <rect key="frame" x="679" y="83" width="83" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="kR3-Ig-OhP" secondAttribute="trailing" constant="6" id="2my-Y7-L7t"/>
+                            <constraint firstItem="kR3-Ig-OhP" firstAttribute="top" secondItem="Cqv-aF-aQU" secondAttribute="bottom" constant="1" id="3OW-xn-Kso"/>
                             <constraint firstItem="V5X-Pj-3WK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4Mk-oI-M5h"/>
                             <constraint firstAttribute="centerX" secondItem="tbY-LX-K8w" secondAttribute="centerX" id="5AI-ej-B3b"/>
                             <constraint firstItem="99O-ka-blD" firstAttribute="top" secondItem="bks-Fo-Osy" secondAttribute="bottom" constant="10" id="69a-lQ-Tar"/>
@@ -227,6 +236,7 @@
                         <outlet property="levelInstruction" destination="4Y1-gV-t0q" id="8Pd-2G-VSu"/>
                         <outlet property="levelObjectiveView" destination="V5X-Pj-3WK" id="q4u-kU-ngu"/>
                         <outlet property="movesLabel" destination="Cqv-aF-aQU" id="YUi-Dx-7TG"/>
+                        <outlet property="movesLeftLabel" destination="kR3-Ig-OhP" id="voy-Nw-r6q"/>
                         <outlet property="nextChallengeButton" destination="I8c-3Y-Wds" id="V8I-os-beZ"/>
                         <outlet property="toolControl" destination="99O-ka-blD" id="G98-fw-tO9"/>
                         <outlet property="toolInstruction" destination="bks-Fo-Osy" id="oEd-GC-qdW"/>
@@ -468,7 +478,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qtQ-VX-LXh">
-                                <rect key="frame" x="60" y="887" width="648" height="89"/>
+                                <rect key="frame" x="60" y="894" width="648" height="89"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQl-hn-0R1">
@@ -511,7 +521,7 @@
                         <constraints>
                             <constraint firstItem="ABq-xw-SHb" firstAttribute="top" secondItem="su9-Tg-XSX" secondAttribute="bottom" constant="20" id="1Oi-O1-mcx"/>
                             <constraint firstItem="ABq-xw-SHb" firstAttribute="top" secondItem="cI1-my-sfW" secondAttribute="bottom" constant="60" id="7Lb-9k-5AI"/>
-                            <constraint firstItem="qtQ-VX-LXh" firstAttribute="top" secondItem="k82-Ms-g7n" secondAttribute="bottom" constant="13" id="8ih-bw-Xjl"/>
+                            <constraint firstItem="qtQ-VX-LXh" firstAttribute="top" secondItem="k82-Ms-g7n" secondAttribute="bottom" constant="20" id="8ih-bw-Xjl"/>
                             <constraint firstItem="k82-Ms-g7n" firstAttribute="top" secondItem="Bxx-Wr-Kg5" secondAttribute="bottom" constant="20" id="9qt-Ex-cOT"/>
                             <constraint firstItem="vsY-Tg-X0y" firstAttribute="top" secondItem="ABq-xw-SHb" secondAttribute="bottom" constant="20" id="9s9-PE-XGk"/>
                             <constraint firstAttribute="centerX" secondItem="Bxx-Wr-Kg5" secondAttribute="centerX" id="KYl-mG-YQt"/>
